syntax = "proto3";

package usermgmt;
option go_package = "usermgmtpb";

message User {
    string id = 1;
    string name = 2;
    int32 age = 3;
    string email = 4;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    string id = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
    repeated User users = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}
